--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,7 +10,7 @@ import '../styles/global.css'
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
         <link rel="sitemap" href="/sitemap-index.xml" />
         <meta name="generator" content={Astro.generator} />
-        <title>Battery Discharge Calculator | Lithium Edition</title>
+        <title>Battery Calculator | Discharge & Charge Timeline</title>
     </head>
     <body>
         <slot />
